# frontdoor

./: .gitignore  DEV_GUIDE.md  README.md  bundle.md  pyproject.toml
context/: architecture.md  conventions.md
deploy/: frontdoor.service  install.sh
docs/: HOSTING.md  architecture.dot  auth-flow.dot  debugging.md  protocol-support.dot
frontdoor/: app_registration.py  auth.py  cli.py  config.py  discovery.py  main.py  ports.py  pyproject.toml  service_control.py  tokens.py
frontdoor/deploy/: install.sh  uninstall.sh  update.sh
frontdoor/frontdoor/: config.py  discovery.py  main.py
frontdoor/frontdoor/routes/: auth.py
frontdoor/frontdoor/static/: index.html  login.html
frontdoor/routes/: admin.py  auth.py  services.py
frontdoor/skills/host-infra-discovery/: SKILL.md
frontdoor/static/: index.html  login.html
frontdoor/templates/: app.service.template  install.sh.template
frontdoor/tests/: conftest.py  test_config.py  test_conventions_md.py  test_discovery.py  test_hosting_md.py  test_install_sh.py  test_login_html.py  test_main.py  test_services_route.py
scripts/: render-brand-assets.py
templates/: app.caddy.template  app.service.template  frontdoor.json.template  install.sh.template  signout-link.html.template
tests/: BROWSER_TESTING.md  test_admin_auth.py  test_admin_routes.py  test_app_registration.py  test_auth.py  test_browser_testing_guide.py  test_bundle_readme.py  test_cli.py  test_config.py  test_discovery.py  test_discovery_enrichment.py  test_hosting_md.py  test_index_html.py  test_install_sh.py  test_login_html.py  test_ports.py  (+5 more)
(+20 files in other folders)
